Components/Mindtouch Knowledge Migration/Mindtouch Knowledge Migration/objects/MindTouchPendingFile__c.object
<CustomObject>
    <fields>
        <fullName>DownloadURL__c</fullName>
        <label>DownloadURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageTitle__c</fullName>
        <label>PageTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <label>TF_EX_MindTouchPendingFile</label>
    <nameField>
        <label>MindTouchPendingFile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MindTouchPendingFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>